Update dashboard components: styles, JS, HTML, and assets

--- a/10_unified_dashboard_2_tabs/dashboard.html
+++ b/10_unified_dashboard_2_tabs/dashboard.html
@@ -46,9 +46,31 @@
     <!-- Tab Navigation -->
     <nav role="navigation" aria-label="Main navigation">
         <ul>
-            <li><a href="#about" class="nav-link active">About</a></li>
-            <li><a href="#individual" class="nav-link">Individual Dataset Analysis</a></li>
-            <li><a href="#compare" class="nav-link">Compare Datasets</a></li>
+            <li><a href="#about" class="nav-link active">
+                <svg class="nav-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="8" cy="8" r="7" stroke="currentColor" stroke-width="1.5" fill="none"/>
+                    <path d="M8 5v4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                    <circle cx="8" cy="11" r="0.5" fill="currentColor"/>
+                </svg>
+                About
+            </a></li>
+            <li><a href="#individual" class="nav-link">
+                <svg class="nav-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="10" width="2" height="4" fill="currentColor"/>
+                    <rect x="6" y="6" width="2" height="8" fill="currentColor"/>
+                    <rect x="10" y="8" width="2" height="6" fill="currentColor"/>
+                    <rect x="14" y="4" width="2" height="10" fill="currentColor"/>
+                </svg>
+                Individual Dataset Analysis
+            </a></li>
+            <li><a href="#compare" class="nav-link">
+                <svg class="nav-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3 8h10M8 3v10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                    <circle cx="6" cy="6" r="1.5" fill="currentColor"/>
+                    <circle cx="10" cy="10" r="1.5" fill="currentColor"/>
+                </svg>
+                Compare Datasets
+            </a></li>
         </ul>
     </nav>
 
@@ -109,12 +131,12 @@
                     <h4>Team</h4>
                     <div class="team-list">
                         <div class="team-member">
-                            <span class="member-initial">DK</span>
-                            <span class="member-name">Daniel</span>
+                            <img src="static/assets/rakhan.png" alt="Rakhan" class="member-avatar">
+                            <a href="https://www.linkedin.com/in/raimbetov/" target="_blank" class="member-name">Rakhan</a>
                         </div>
                         <div class="team-member">
-                            <span class="member-initial">RA</span>
-                            <span class="member-name">Rakhan</span>
+                            <img src="static/assets/daniel.png" alt="Daniel" class="member-avatar">
+                            <a href="https://www.linkedin.com/in/danielkravtsov" target="_blank" class="member-name">Daniel</a>
                         </div>
                     </div>
                 </section>
