About sidebar: show full team names, add glass card with non-hover tabs

--- a/10_unified_dashboard_2_tabs/dashboard.html
+++ b/10_unified_dashboard_2_tabs/dashboard.html
@@ -127,16 +127,20 @@
 
 
                 <!-- Contributors -->
-                <section class="sidebar-section contributors-section">
+                <section class="sidebar-section contributors-section glass-card">
                     <h4>Team</h4>
+                    <div class="tabs no-hover" role="tablist" aria-label="Team tabs">
+                        <button class="tab active" role="tab" aria-selected="true">Core</button>
+                        <button class="tab" role="tab" aria-selected="false">Advisors</button>
+                    </div>
                     <div class="team-list">
                         <div class="team-member">
-                            <img src="static/assets/rakhan.png" alt="Rakhan" class="member-avatar">
-                            <a href="https://www.linkedin.com/in/raimbetov/" target="_blank" class="member-name">Rakhan</a>
+                            <img src="static/assets/rakhan.png" alt="Rakhan Raimbetov" class="member-avatar">
+                            <a href="https://www.linkedin.com/in/raimbetov/" target="_blank" class="member-name">Rakhan Raimbetov</a>
                         </div>
                         <div class="team-member">
-                            <img src="static/assets/daniel.png" alt="Daniel" class="member-avatar">
-                            <a href="https://www.linkedin.com/in/danielkravtsov" target="_blank" class="member-name">Daniel</a>
+                            <img src="static/assets/daniel.png" alt="Daniel Kravtsov" class="member-avatar">
+                            <a href="https://www.linkedin.com/in/danielkravtsov" target="_blank" class="member-name">Daniel Kravtsov</a>
                         </div>
                     </div>
                 </section>
