--- a/10_unified_dashboard_2_tabs/static/about_content.html
+++ b/10_unified_dashboard_2_tabs/static/about_content.html
@@ -247,17 +247,17 @@ graph TD
             <h2><span class="science-icon" data-number="12"></span>Contributors</h2>
             <p>This project is developed and maintained by a team of researchers and developers passionate about ECM biology and aging research.</p>
             <div class="links">
-                <a href="https://www.linkedin.com/in/raimbetov/" target="_blank" class="link-item">
+                <div class="link-item" onclick="window.open('https://www.linkedin.com/in/raimbetov/', '_blank')">
                     <img src="static/assets/rakhan.png" alt="Rakhan Aimbetov" class="contributor-avatar">
                     <h4>Rakhan Aimbetov</h4>
                     <p>Data Scientist & Developer</p>
-                </a>
-                <a href="https://www.linkedin.com/in/danielkravtsov" target="_blank" class="link-item">
+                </div>
+                <div class="link-item" onclick="window.open('https://www.linkedin.com/in/danielkravtsov', '_blank')">
                     <img src="static/assets/daniel.png" alt="Daniel Kravtsov" class="contributor-avatar">
                     <h4>Daniel Kravtsov</h4>
                     <p>CEO & Founder of Improvado</p>
                     <small>daniel@improvado.io</small>
-                </a>
+                </div>
             </div>
         </section>
 
