feat: Enhance ECM-Atlas longevity pitch deck
- Add new longevity_pitch_deck.html presentation with professional slide deck
- Implement black & white theme with orange accent colors
- Add 16:9 aspect ratio for desktop presentation format
- Integrate header as part of presentation container
- Create 4-card layout for first slide statistics
- Add styled note block on slide 2 for key insights
- Ensure full screen utilization while maintaining aspect ratios
- Responsive design for mobile devices
- Update dashboard styles and scripts for consistency

--- a/10_unified_dashboard_2_tabs/dashboard.html
+++ b/10_unified_dashboard_2_tabs/dashboard.html
@@ -21,6 +21,14 @@
 <body>
     <!-- Header -->
     <header class="header-awesome" id="mission">
+        <!-- Matrix Background Canvas -->
+        <canvas id="matrix-bg" class="matrix-canvas"></canvas>
+
+        <!-- Matrix Glass Overlay Layers -->
+        <div class="matrix-glass-layer matrix-layer-1"></div>
+        <div class="matrix-glass-layer matrix-layer-2"></div>
+        <div class="matrix-glass-layer matrix-layer-3"></div>
+
         <div class="header-content">
             <div class="header-top">
                 <div class="header-brand">
